--- a/src/main/resources/fxml/views/dashboard.fxml
+++ b/src/main/resources/fxml/views/dashboard.fxml
@@ -17,7 +17,7 @@
 <?import javafx.scene.chart.PieChart?>
 <BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.jakubdeniziak.financialtracker.ui.controller.DashboardController">
+            fx:controller="com.jakubdeniziak.financialtracker.ui.controller.views.DashboardController">
 
     <!-- TOP: Page title and currency chooser -->
     <top>
