feat: add assets view

--- a/src/main/resources/fxml/elements/navigation.fxml
+++ b/src/main/resources/fxml/elements/navigation.fxml
@@ -11,6 +11,7 @@
 >
 
     <Button text="Dashboard" onAction="#openDashboard"/>
+    <Button text="Assets" onAction="#openAssets"/>
     <Region HBox.hgrow="ALWAYS"/>
     <ComboBox fx:id="currencyChooser" />
 
