--- a/src/main/resources/fxml/views/dashboard.fxml
+++ b/src/main/resources/fxml/views/dashboard.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.jakubdeniziak.financialtracker.ui.controller.views.DashboardController">
+            fx:controller="com.jakubdeniziak.financialtracker.ui.controller.view.DashboardViewController">
 
     <!-- TOP: Navigation -->
     <top>
