--- a/src/main/resources/fxml/dialogs/expense.fxml
+++ b/src/main/resources/fxml/dialogs/expense.fxml
@@ -9,11 +9,14 @@
 
     <content>
         <GridPane vgap="10">
-            <Label text="Month:" GridPane.rowIndex="0" GridPane.columnIndex="0"/>
+            <Label text="Month: " GridPane.rowIndex="0" GridPane.columnIndex="0"/>
             <DatePicker fx:id="monthPicker" GridPane.rowIndex="0" GridPane.columnIndex="1"/>
 
-            <Label text="Amount:" GridPane.rowIndex="1" GridPane.columnIndex="0"/>
+            <Label text="Amount: " GridPane.rowIndex="1" GridPane.columnIndex="0"/>
             <TextField fx:id="amountField" GridPane.rowIndex="1" GridPane.columnIndex="1"/>
+
+            <Label text="Currency: " GridPane.rowIndex="2" GridPane.columnIndex="0"/>
+            <TextField fx:id="currencyField" GridPane.rowIndex="2" GridPane.columnIndex="1"/>
         </GridPane>
     </content>
 
