--- a/src/main/resources/fxml/views/assets.fxml
+++ b/src/main/resources/fxml/views/assets.fxml
@@ -22,6 +22,7 @@
                 <TableColumn fx:id="categoryColumn" text="Category"/>
                 <TableColumn fx:id="typeColumn" text="Type"/>
                 <TableColumn fx:id="currencyColumn" text="Currency"/>
+                <TableColumn fx:id="priceColumn" text="Asset price"/>
             </columns>
         </TableView>
     </center>
