--- a/src/main/resources/fxml/dialogs/asset_price.fxml
+++ b/src/main/resources/fxml/dialogs/asset_price.fxml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.ButtonType?>
-<?import javafx.scene.control.DialogPane?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.chart.LineChart?>
 <?import javafx.scene.chart.CategoryAxis?>
+<?import javafx.scene.chart.LineChart?>
 <?import javafx.scene.chart.NumberAxis?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <DialogPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="com.jakubdeniziak.financialtracker.ui.controller.dialog.AssetPriceDialogController"
@@ -24,6 +22,22 @@
                     <NumberAxis label="Price"/>
                 </yAxis>
             </LineChart>
+            <Label text="Add historical price" style="-fx-font-weight: bold"/>
+            <GridPane hgap="10" vgap="10">
+                <Label text="Date:" GridPane.rowIndex="0" GridPane.columnIndex="0"/>
+                <DatePicker fx:id="datePicker" GridPane.rowIndex="0" GridPane.columnIndex="1"/>
+
+                <Label text="Hour:" GridPane.rowIndex="1" GridPane.columnIndex="0"/>
+                <Spinner fx:id="hourSpinner" GridPane.rowIndex="1" GridPane.columnIndex="1"/>
+
+                <Label text="Minute:" GridPane.rowIndex="2" GridPane.columnIndex="0"/>
+                <Spinner fx:id="minuteSpinner" GridPane.rowIndex="2" GridPane.columnIndex="1"/>
+
+                <Label fx:id="priceLabel" text="Price:" GridPane.rowIndex="3" GridPane.columnIndex="0"/>
+                <TextField fx:id="priceField" GridPane.rowIndex="3" GridPane.columnIndex="1"/>
+
+                <Button text="Add" onAction="#onAddPrice" GridPane.rowIndex="4" GridPane.columnIndex="1"/>
+            </GridPane>
         </VBox>
     </content>
 
